fix : remove button hover on mobile

--- a/src/entrypoints/sections/styles/join-the-heist-society.scss
+++ b/src/entrypoints/sections/styles/join-the-heist-society.scss
@@ -393,8 +393,10 @@
       width: 100%;
       padding-block: unset;
       gap: var(--space-2);
-      &:hover {
-        gap: var(--space-8);
+      @include respond-to(lg) {
+        &:hover {
+          gap: var(--space-8);
+        }
       }
     }
   }
